syntax = "proto3";

package todolist;
option go_package = ".;todolist";

service ToDoListManager {
    rpc ListToDos (RequestListMessage) returns (ListToDosMessage);
    rpc AddToDo (AddToDoMessage) returns (ListToDosMessage);
    rpc UpdateToDo (UpdateToDoMessage) returns (ListToDosMessage);
    rpc DeleteToDo (DeleteToDoMessage) returns (ListToDosMessage);
}

message RequestListMessage {
    string text = 1;
}

message ToDoMessage {
    string Id = 1;
    string Text = 2;
}

message ListToDosMessage {
    repeated ToDoMessage ToDosList = 1;
}

message AddToDoMessage {
    string text = 1;
}

message UpdateToDoMessage {
    int32 id = 1;
    string text = 2;
}

message DeleteToDoMessage {
    int32 id = 1;
}